# spark_notebook_base

./: Dockerfile  README.md  build.gradle.kts  pyproject.toml  requirements.txt
.github/workflows/: build_base.yml  publish_docker_image.yml  release.yml
local_dev/: README.md  pyproject.toml  requirements-dev.txt
src/main/java/us/kbase/spark/: KBaseAuthServerInterceptor.java  NamespaceValidationInterceptor.java
