[project]
name = "berdl_notebook_python_base"
version = "0.1.0"
description = "BERDL Notebook Environment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cdm-spark-manager-client",
    "cdm-task-service-client",
    "cdm-tree-browser",
    "datalake-mcp-server-client",
    "jupyter-ai-cborg",
    "minio-manager-service-client",
    "attrs==25.4.0",
    "boto3==1.42.19",
    "hmsclient>=0.1.1",
    "httpx==0.28.1",
    "itables==2.6.2",
    "jupyterlab-favorites==3.3.1",
    "minio==7.2.20",
    "pandas==2.3.3",
    "pip==25.3",
    "sidecar==0.8.0",
    # Note these dependencies are already in the container, but we should explicitly call them out here
    "delta-spark==4.0.0",
    "py4j==0.10.9.9",
    "pydantic-settings==2.12.0",
    "pyspark[connect]==4.1.0",
    # Jupyter AI dependencies
    "jupyter-ai==2.31.7",
    "langchain-openai==0.3.35", # Keep at 0.3.x for jupyter-ai compatibility
    "langchain-anthropic==0.3.22", # Keep at 0.3.x for jupyter-ai compatibility
    "langchain-ollama==0.3.10", # Keep at 0.3.x for jupyter-ai compatibility
    "langchain-mcp-tools==0.2.13", # Automatic MCP tool discovery for FastApiMCP servers
    "websockets==15.0.1", # Required by langchain-mcp-tools
    "huggingface-hub==1.2.3",
    "berdl-access-request",
    "berdl-jupyterlab-coreui",
]

[tool.uv.sources]
cdm-spark-manager-client = { git = "https://github.com/kbase/cdm-kube-spark-manager-client.git", rev = "0.0.1" }
cdm-task-service-client = { git = "https://github.com/kbase/cdm-task-service-client.git", rev = "0.2.2" }
cdm-tree-browser = { url = "https://github.com/kbaseincubator/cdm-tree-browser/releases/download/0.2.0/cdm_tree_browser-0.1.0-py3-none-any.whl" }
datalake-mcp-server-client = { git = "https://github.com/BERDataLakehouse/datalake-mcp-server-client.git", rev = "v0.0.5" }
jupyter-ai-cborg = { git = "https://github.com/kbaseincubator/cdm-jupyter-ai-cborg.git" }
minio-manager-service-client = { git = "https://github.com/BERDataLakehouse/minio_manager_service_client.git", rev = "v0.0.7" }
berdl-access-request = { git = "https://github.com/BERDataLakehouse/berdl_access_request_extension.git", rev = "v0.0.3" }
berdl-jupyterlab-coreui = { url = "https://github.com/BERDataLakehouse/BERDL_JupyterLab_CoreUI/releases/download/0.0.3/berdl_jupyterlab_coreui-0.0.3-py3-none-any.whl" }

[dependency-groups]
dev = [
    "wheel>=0.45.1",
]
