[project]
name = "berdl_notebook_python_base"
version = "0.1.0"
description = "BERDL Notebook Environment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # --- BERDL internal clients & extensions ---
    "cdm-spark-manager-client",
    "cdm-task-service-client",
    "datalake-mcp-server-client",
    "minio-manager-service-client",
    "berdl-access-request",
    "berdl-jupyterlab-coreui",
    "berdl-task-browser",
    "tenant-data-browser",
    "beril-cli",

    # --- Spark & Delta Lake ---
    # Pinned to 4.0.1 — must match base Docker image Spark version and build.gradle.kts
    # Blocked from upgrading to 4.1.x by Sedona (only supports Spark <=4.0 as of Feb 2026)
    "pyspark[connect]==4.0.1",
    "delta-spark==4.0.1",
    "py4j==0.10.9.9",

    # --- Apache Iceberg ---
    "pyiceberg[s3fs]==0.11.1",

    # --- Jupyter AI ---
    "jupyter-ai==3.0.0",
    "langchain==1.2.18",
    "langchain-classic==1.0.7",
    "langchain-community==0.4.1",
    "langchain-openai==1.2.1",
    "langchain-anthropic==1.4.3",
    "langchain-ollama==1.1.0",
    "langchain-mcp-tools==0.3.3",      # Automatic MCP tool discovery for FastApiMCP servers
    "websockets==16.0",                # Required by langchain-mcp-tools
    "huggingface-hub==1.14.0",

    # --- JupyterLab extensions & notebook tools ---
    "jupyterlab-favorites==3.5.0",
    "sidecar==0.8.1",
    "papermill==2.7.0",
    "itables==2.7.3",

    # --- Storage (S3 / MinIO) ---
    "minio==7.2.20",
    "boto3==1.42.55",  # Constrained by s3contents → aiobotocore botocore pin
    # CAUTION: s3contents is patched in spark_notebook/scripts/patch_s3contents.py.
    # Do not upgrade without verifying the patch compatibility.
    "s3contents==0.12.0",
    "hybridcontents==0.4.0",

    # --- Computational biology & data science ---
    "pandas==3.0.2",
    "scikit-learn==1.8.0",
    "scikit-bio==0.7.2",
    "scipy==1.17.1",
    "biopython==1.87",
    "matplotlib==3.10.9",
    "seaborn==0.13.2",
    "scanpy==1.12.1",

    # --- Trino ---
    "trino==0.337.0",

    # --- Core utilities ---
    "cacheout==0.16.0",
    "attrs==26.1.0",
    "httpx==0.28.1",
    "pydantic-settings==2.14.1",
    "sqlalchemy==2.0.49",
    "hmsclient==0.1.1",
    "pip==26.1.1",
]

[tool.uv.sources]
cdm-spark-manager-client = { git = "https://github.com/kbase/cdm-kube-spark-manager-client.git", rev = "0.0.1" }
datalake-mcp-server-client = { git = "https://github.com/BERDataLakehouse/datalake-mcp-server-client.git", rev = "v0.0.10" }
minio-manager-service-client = { git = "https://github.com/BERDataLakehouse/minio_manager_service_client.git", rev = "v0.0.22" }
berdl-access-request = { url = "https://github.com/BERDataLakehouse/berdl_access_request_extension/releases/download/v0.1.0/berdl_access_request-0.1.0-py3-none-any.whl" }
cdm-task-service-client = { git = "https://github.com/kbase/cdm-task-service-client", rev = "0.2.3" }
berdl-task-browser = { url = "https://github.com/BERDataLakehouse/berdl_task_browser/releases/download/0.2.1/berdl_task_browser-0.2.1-py3-none-any.whl" }
berdl-jupyterlab-coreui = { url = "https://github.com/BERDataLakehouse/BERDL_JupyterLab_CoreUI/releases/download/0.0.7/berdl_jupyterlab_coreui-0.0.7-py3-none-any.whl" }
tenant-data-browser = { url = "https://github.com/BERDataLakehouse/tenant-data-browser/releases/download/pr-24/tenant_data_browser-0.5.1.dev11-py3-none-any.whl" }
beril-cli = { git = "https://github.com/kbaseincubator/BERIL-research-observatory.git", rev = "2a9dc4f714509adeef675217f563fb705b101e63" }

[dependency-groups]
dev = [
    "wheel>=0.47.0",
]
