[project]
name = "jupyterhubsingleuser"
version = "0.1.0"
description = "BERDL Notebook Environment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cdm-spark-manager-client",
    "cdm-task-service-client",
    "cdm-minio-service-client",
    "cdm-tree-browser",
    "jupyter-ai-cborg",
    "jupyterlab-favorites==3.2.2",
    "boto3==1.40.3",
    "itables==2.4.5",
    "minio==7.2.16",
    "pandas==2.3.2",
    "pip==25.2",
    "sidecar==0.7.0",
    "httpx==0.28.1",
    "attrs==25.3.0",
    # Note these dependencies are already in the container, but we should explicitly call them out here
    "pyspark==4.0.0",
    "py4j==0.10.9.9",
    "delta-spark==4.0.0",
    "pydantic-settings==2.10.1",
]

[tool.uv.sources]
jupyter-ai-cborg = { git = "https://github.com/kbaseincubator/cdm-jupyter-ai-cborg.git", rev = "v0.1.0" }
cdm-task-service-client = { git = "https://github.com/kbase/cdm-task-service-client.git", rev = "0.2.0" }
cdm-spark-manager-client = { git = "https://github.com/kbase/cdm-kube-spark-manager-client.git", rev = "0.0.1" }
cdm-minio-service-client = { git = "https://github.com/kbase/cdm-minio-service-client.git", rev = "0.0.1" }
cdm-tree-browser = { url = "https://github.com/kbaseincubator/cdm-tree-browser/releases/download/0.0.2/cdm_tree_browser-0.1.0-py3-none-any.whl" }